# RaspberrySpotter

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  RaspberryPi.cmake
Projects/: CMakeLists.txt
Projects/SpotterServer/: CMakeLists.txt
Projects/SpotterServer/src/: CondVar.hpp  GlobalDefines.hpp  Logging.cpp  Main.cpp  MessageConversion.cpp  MessageConversion.hpp  Mutex.hpp  SpotifyKeys.hpp  SpotifyPlayer.cpp  SpotifyPlayer.hpp  SpotifyPlaylistContainer.cpp  SpotifyPlaylistContainer.hpp  SpotifyRunner.cpp  SpotifyRunner.hpp  SpotifySession.cpp  SpotifySession.hpp  TaskInformation.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp  Thread.cpp  Thread.hpp  ThreadingUtils.cpp  ThreadingUtils.hpp
Projects/SpotterServer/src/Base64Encoder/: modp_b64.cpp
Projects/SpotterServer/src/PropertyParser/: propertyutil.cpp  propertyutil.h
Projects/SpotterServer/src/Responses/: ClientResponse.cpp  ClientResponse.hpp  ListResponse.hpp  PlayerResponse.hpp  ResponseStructures.hpp  StatusResponse.hpp
Projects/SpotterServer/src/SpotifyAlsa/: alsa-audio.cpp
Projects/SpotterServer/src/Tasks/: PlayerTask.cpp  PlayerTask.hpp  PlaylistTask.cpp  PlaylistTask.h  Task.cpp  Task.hpp
Projects/TestClient/: .gitignore  CMakeLists.txt  Makefile
Projects/TestClient/src/: Main.cpp
